--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+
     <header>
         <a href="#"><img src="imagens/logo.png" alt="Hotel Paraíso"></a>
         <nav>
@@ -22,6 +23,12 @@
             </ul>
         </nav>
     </header>
+
+    <section class="hero">
+        <h1>Conheça este paraíso chamado Itacaré</h1>
+        <h3>"Aconchego, conforto, simpatia e alto astral"</h3>
+        <a class="btn" href="">Saiba mais</a>
+    </section>
 
     
 </body>
