--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
 
+    <!--HEADER-->
     <header>
         <a href="#"><img src="imagens/logo.png" alt="Hotel Paraíso"></a>
         <nav>
@@ -24,10 +25,24 @@
         </nav>
     </header>
 
+    <!--HERO (IMAGE)-->
     <section class="hero">
         <h1>Conheça este paraíso chamado Itacaré</h1>
         <h3>"Aconchego, conforto, simpatia e alto astral"</h3>
         <a class="btn" href="">Saiba mais</a>
+    </section>
+
+    <!--CONHEÇA O HOTEL-->
+    <section class="conheca-o-hotel">
+        <h3>Conheça o Hotel Paraíso!</h3>
+        <p>Feche os olhos e imagine o paraíso. Um lugar no meio da Mata Atlântica e banhado pelo mar, onde você encontra paz, tranquilidade, conforto e comodidade</p>
+        <hr>
+        <ul class="grid">
+            <li class="small" style="background-image: url('imagens/itacare-01.jpg')"></li>
+            <li class="large" style="background-image: url('imagens/itacare-02.jpg')"></li>
+            <li class="large" style="background-image: url('imagens/itacare-03.jpg')"></li>
+            <li class="small" style="background-image: url('imagens/itacare-04.jpg')"></li>
+        </ul>
     </section>
 
     
