--- a/index.html
+++ b/index.html
@@ -69,6 +69,18 @@
         </ul>
     </section>
 
+    <!--NEWSLETTER-->
+    <section class="newsletter">
+        <h3>Newsletter</h3>
+        <p>Assine nossa Newsletter para se manter atualizado com nossos serviços e a programação de nossos eventos culturais.</p>
+        <hr>
+
+        <form>
+            <input type="email" placeholder="Email">
+            <button>Cadastrar</button>
+        </form>
+    </section>
+
 
     
 </body>
